# docs/swagger.json
@@ -8,7 +8,7 @@
     "host": "localhost:8080",
     "basePath": "/albums",
     "paths": {
-        "/": {
+        "/get/": {
             "get": {
                 "description": "get all albums",
                 "tags": [
@@ -32,7 +32,47 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/get/{id}": {
+            "get": {
+                "description": "get album by ID",
+                "tags": [
+                    "album"
+                ],
+                "summary": "Get one user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Album ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.album"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/post/": {
             "post": {
                 "description": "Create new album",
                 "consumes": [
@@ -68,44 +108,6 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            }
-        },
-        "/{id}": {
-            "get": {
-                "description": "get album by ID",
-                "tags": [
-                    "album"
-                ],
-                "summary": "Get one user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Album ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.album"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "type": "object"
                         }
